# oyez

./: .coveragerc  .gitreview  HACKING.rst  README.rst  requirements.txt  setup.cfg  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
oyez/: __init__.py  citation.py  lookup.py
oyez/tests/: test_oyez.py
