[metadata]
name = oyez
summary = Wrangling the domain-specific language of the US Federal judiciary
description-file =
    README.rst
author = oyez developers
author-email = user@example.net
home-page = https://github.com/ariddell/oyez
classifier =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    oyez

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
